--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
-# MinIO Configuration
-MINIO_ENDPOINT=minio.siyahsensei.com
-MINIO_PORT=443
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/blog"
+ADMIN_PASSWORD=changeme
+MINIO_ENDPOINT=http://localhost:9000
+MINIO_PORT=80
 MINIO_USE_SSL=true
 MINIO_ACCESS_KEY=your_access_key
 MINIO_SECRET_KEY=your_secret_secret
