tech: sitemap edited and rss feed added

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ MINIO_PORT=80
 MINIO_USE_SSL=true
 MINIO_ACCESS_KEY=your_access_key
 MINIO_SECRET_KEY=your_secret_secret
+NEXT_PUBLIC_SITE_URL=https://blog.siyahsensei.com
