--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
+    "feed": "^5.1.0",
     "gray-matter": "^4.0.3",
     "minio": "^8.0.6",
     "next": "16.0.7",
