--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ MINIO_USE_SSL=true
 MINIO_ACCESS_KEY=your_access_key
 MINIO_SECRET_KEY=your_secret_secret
 NEXT_PUBLIC_SITE_URL=https://blog.siyahsensei.com
+NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
